Bug: 832939 Reviewer: Jay Wootton Comment: In the Share dialog, truncate a long path on browsers that only word wrap on spaces.  Display the full path on mouse over.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -670,6 +670,7 @@
 	color: #505354;
 	font-size: 13px;
 	line-height: 16px;
+	overflow: hidden;
 }
 
 .shareThisDlg_NoteLabel
